{
    "name": "MainControls",
    "maps": [
        {
            "name": "Free Flight",
            "id": "cda8c4c3-6f11-49e0-b97d-0a2b7d8b13b7",
            "actions": [
                {
                    "name": "Turn",
                    "type": "Value",
                    "id": "3fe705c1-cae7-4bdd-9659-693c10480cd9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "VelocityChange",
                    "type": "Value",
                    "id": "dbf69ccb-b54d-458a-afdd-43f1c3494a3f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Strafe",
                    "type": "Value",
                    "id": "8cd88de1-ef55-41e9-bc0d-a5707f09e8e9",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.8)",
                    "initialStateCheck": true
                },
                {
                    "name": "ResetOrientation",
                    "type": "Button",
                    "id": "01e8326a-955a-4b7a-9838-5742c8d68269",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Drift",
                    "type": "Button",
                    "id": "9de613cb-095d-460f-920b-61696016b9a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Boost",
                    "type": "Value",
                    "id": "9470a6ae-6520-4d36-9f16-4a48dd9cb33e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "6dda2307-01b8-4f5c-806e-89276e4374e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectGatlingWeapon",
                    "type": "Button",
                    "id": "b0630911-5dc8-43c4-a2d9-28084ddc391f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectRocketWeapon",
                    "type": "Button",
                    "id": "5e77a749-de20-49b4-a95a-822b6698b4bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectEnergyWeapon",
                    "type": "Button",
                    "id": "3f28c408-76ab-41ec-95b7-b40ce1edf2a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4712432f-f69b-4652-ba8e-fbabd0950f2b",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "InvertVector2(invertX=false),StickDeadzone(min=0.15,max=0.99)",
                    "groups": "Spaceship",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5bf9571-0ca6-4f54-9133-602103c122a8",
                    "path": "<Gamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "AxisDeadzone,Normalize(min=-1,max=1)",
                    "groups": "Spaceship",
                    "action": "VelocityChange",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fccc49be-beaa-46ea-b83c-9bd7ef061aba",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Spaceship",
                    "action": "Strafe",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d06a7010-ee45-4e50-8065-ce66532b5c5f",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Spaceship",
                    "action": "ResetOrientation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0a93e34-fac0-4d8e-9902-9fd1a2e37614",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Spaceship",
                    "action": "Drift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f255812-a9f5-48fa-a52a-59ea83a43f43",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Spaceship",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "485a7824-99e6-44b0-a31a-a39d0cfd231c",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Spaceship",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68a62514-0433-4cdc-aebf-08a075a73f71",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Spaceship",
                    "action": "SelectGatlingWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "056b0bf5-f225-40ec-876e-522868a32adb",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Spaceship",
                    "action": "SelectRocketWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e8460c39-9bc4-419f-a68e-7e70e0c3456e",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Spaceship",
                    "action": "SelectEnergyWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Spaceship",
            "bindingGroup": "Spaceship",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}